@@ -23,6 +23,7 @@ Other features
  * Add ``pre_page_move`` and ``post_page_move`` signals. (Andy Babic)
  * Add ability to sort search promotions on listing page (Chris Ranjana, LB (Ben Johnston))
  * Upgrade internal JS tooling to Gulp v4 & Node v10 (Jim Jazwiecki, Kim LaRocca)
+ * Add ``after_publish_page``, ``before_publish_page``, ``after_unpublish_page`` & ``before_unpublish_page`` hooks (Jonatas Baldin, Coen van der Kamp)
 
 
 Bug fixes
